[tool.poetry]
name = "melotts"
version = "0.1.0"
description = ""
authors = ["Joe Lombrozo <joe@djeebus.net>"]
readme = "README.md"
packages = [{ include = "melo" }]

[tool.poetry.dependencies]
python = "^3.9"
txtsplit = "^1.0.0"
torch = "^2.4.0"
torchaudio = "^2.4.0"
cached-path = "^1.6.3"
transformers = "4.27.4"
num2words = "0.5.12"
unidic-lite = "1.0.8"
unidic = "1.1.0"
mecab-python3 = "1.0.9"
pykakasi = "2.2.1"
g2p-en = "2.1.0"
anyascii = "0.3.2"
jamo = "0.4.1"
gruut = { version = "2.2.3", extras = ["de", "es", "fr"] }
librosa = "0.9.1"
pydub = "0.25.1"
eng-to-ipa = "0.0.2"
inflect = "7.0.0"
unidecode = "1.3.7"
pypinyin = "0.50.0"
cn2an = "0.5.22"
jieba = "0.42.1"
tqdm = "^4.66.5"
tensorboard = "2.16.2"
loguru = "0.7.2"
botocore = "^1.34.156"
gradio = "<4"
fugashi = "1.3.0"
langid = "1.1.6"
g2pkk = ">=0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
